# Rust_Full_Stack_application

./: Cargo.toml
client/: Cargo.toml  Makefile  index.html
client/src/: detail.rs  lib.rs
client/src/device/: create.rs  mod.rs
client/src/owner/: create.rs  detail.rs  list.rs  mod.rs
common/: Cargo.toml
common/src/: lib.rs
server/: Cargo.toml  Makefile  db.sql
server/src/: db.sql  error.rs  handler.rs  main.rs  mod.rs
server/src/db/: mod.rs  mod_db.rs  mod_device.rs  mod_owner.rs
