[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.18"
yew-router = "0.15.0"
wasm-bindgen = "0.2.82"
serde_json = "1.0.83"
serde = {version = "1.0.143", features = ["derive"]}
anyhow = "1.0.61"
common = {version = "0.1.0", path = "../common"}
